--- a/cio-utm-test.html
+++ b/cio-utm-test.html
@@ -33,27 +33,32 @@
     }
 
     .app-container {
+      box-sizing: border-box;
       max-width: 1280px;
       margin: 0 auto;
       padding: 2rem;
     }
 
-    /* ── Header (gradient title matching App.jsx) ── */
-    header {
+    /* ── Header (matches App.css page header styles) ── */
+    .page-header {
       margin-top: 1.5rem;
       margin-bottom: 2rem;
       text-align: left;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
     }
-    header h1 {
+    .page-title {
       font-size: 2.5rem;
       font-weight: 600;
       letter-spacing: -0.025em;
-      margin-bottom: 0.5rem;
+      margin: 0 0 0.5rem 0;
       background: linear-gradient(to right, #68826C, #86efac);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    header p {
+    .page-subtitle {
+      margin: 0;
       color: var(--text-secondary);
       font-size: 1.125rem;
     }
@@ -79,6 +84,9 @@
     @media (max-width: 768px) {
       .app-container { padding: 1rem; }
       .main-grid { grid-template-columns: 1fr; }
+      .top-nav { flex-wrap: wrap; gap: 0.75rem; }
+      .top-nav-links { flex-wrap: wrap; }
+      .page-header { gap: 1rem; flex-direction: column; align-items: flex-start; }
       .debug-column { position: static; max-height: none; overflow-y: visible; }
     }
 
@@ -207,25 +215,20 @@
       margin-bottom: 0;
       border-bottom: 1px solid var(--border-color);
     }
-    .top-nav .nav-brand {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      text-decoration: none;
+    .top-nav-brand {
       margin-right: 0.5rem;
       flex-shrink: 0;
-    }
-    .top-nav .nav-brand span {
       font-weight: 600;
       font-size: 0.875rem;
       color: var(--text-primary);
       letter-spacing: -0.025em;
+      text-decoration: none;
     }
-    .top-nav .nav-links-top {
+    .top-nav-links {
       display: flex;
       gap: 0.25rem;
     }
-    .top-nav .nav-links-top a {
+    .top-nav-link {
       padding: 0.375rem 0.75rem;
       border-radius: 0.375rem;
       font-size: 0.8125rem;
@@ -236,11 +239,11 @@
       background: transparent;
       border: none;
     }
-    .top-nav .nav-links-top a:hover {
+    .top-nav-link:hover {
       color: var(--text-primary);
       background: rgba(104, 130, 108, 0.1);
     }
-    .top-nav .nav-links-top a.active {
+    .top-nav-link.active {
       color: var(--text-primary);
       background: rgba(104, 130, 108, 0.2);
     }
@@ -264,18 +267,19 @@
 
   <div class="app-container">
     <nav class="top-nav">
-      <a href="/" class="nav-brand">
-        <span>CIO Toolbox</span>
-      </a>
-      <div class="nav-links-top">
-        <a href="/">Pipelines SDK</a>
-        <a href="/cio-utm-test.html" class="active">UTM Persistence</a>
+      <a href="/" class="top-nav-brand">CIO Toolbox</a>
+      <div class="top-nav-links">
+        <a href="/" class="top-nav-link">Pipelines SDK</a>
+        <a href="/hello-world" class="top-nav-link">Hello World</a>
+        <a href="/cio-utm-test.html" class="top-nav-link active">UTM Persistence</a>
       </div>
     </nav>
 
-    <header>
-      <h1>UTM Persistence Test</h1>
-      <p>Validate anonymous in-app message triggering via persisted UTM parameters.</p>
+    <header class="page-header">
+      <div>
+        <h1 class="page-title">UTM Persistence Test</h1>
+        <p class="page-subtitle">Validate anonymous in-app message triggering via persisted UTM parameters.</p>
+      </div>
     </header>
 
     <div class="main-grid">
